# Topo

./: .gitattributes  .gitignore  .gitmodules  README.md  README_SETUP.md  eta_inputs.txt  requirements.txt  run_scraper.sh  setup.sh
.github/workflows/: cpp_compute.yml  python_ingest.yml
contracts/: README.md  artifact_formats.md  math_spec.md  params.md  parquet_schema.md
cpp/: CMakeLists.txt
cpp/apps/: daily_run.cpp  test_correlation.cpp  test_diffusion.cpp  test_graph.cpp  test_io_parquet.cpp  test_returns.cpp  test_topology.cpp  tune_eta.cpp
cpp/include/: correlation.hpp  diffusion.hpp  graph.hpp  io_parquet.hpp  returns.hpp  strain.hpp  topology.hpp  types.hpp
cpp/src/: correlation.cpp  diffusion.cpp  graph.cpp  io_parquet.cpp  returns.cpp  strain.cpp  topology.cpp
data/: universe.csv
data/compute_inputs/: .gitkeep  README.md  prices_window.parquet  prices_window_2026-01-08.parquet  prices_window_2026-01-09.parquet  prices_window_2026-01-12.parquet  prices_window_2026-01-13.parquet  prices_window_2026-01-14.parquet  prices_window_2026-01-15.parquet  prices_window_2026-01-16.parquet  prices_window_2026-01-20.parquet  prices_window_2026-01-21.parquet  prices_window_2026-01-22.parquet  prices_window_2026-01-23.parquet
data/exports/: normalized_strain_2024.csv  normalized_strain_2025.csv  strain_raw_2022.csv  strain_raw_2023.csv  strain_raw_2024.csv  strain_raw_2025.csv  strain_raw_2026.csv
data/prices/: .gitkeep  prices.parquet
prompts/: contracts_prompt.md  cpp_compute_prompt.md  cursor_system.md  python_ingest_prompt.md  reviewer_prompt.md
scraper/: __init__.py  __main__.py  compute_input_materializer.py  config.py  prices_store.py  qc_report.py  universe_loader.py  validation.py  yf_fetcher.py
scripts/: backfill_daily_run.py  recompute_normalized_strain.py  tune_coeffs_future_drawdown.py  tune_coeffs_unsupervised.py
